// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controls/_stickyBlock/StickyBlockReact Стики блок рендерится с top = -10, left = 0, левая тень включена 1`] = `
<div
  class="controls-Scroll controls-Scroll-Container"
>
  <div
    class="controls-StickyBlock controls-background-default-sticky "
    style="top: -10px; left: 0px;"
  >
    <div
      class="controls-StickyBlock__content"
    >
      1
    </div>
    <div
      class="controls-StickyBlock__observationTarget_top"
      style="top: 8px;"
    />
    <div
      class="controls-StickyBlock__observationTarget_top2"
    />
    <div
      class="controls-StickyBlock__observationTarget_top2Right"
    />
    <div
      class="controls-StickyBlock__observationTarget_bottomLeft"
      style="bottom: -2px;"
    />
    <div
      class="controls-StickyBlock__observationTarget_bottomRight"
      style="bottom: -2px;"
    />
    <div
      class="controls-StickyBlock__observationTarget_left"
      style="left: -2px;"
    />
    <div
      class="controls-StickyBlock__observationTarget_right"
      style="right: -2px;"
    />
    <div
      class="controls-Scroll__shadow controls-StickyHeader__shadow-top controls-StickyHeader__shadow-top_default controls-Scroll__shadow_horizontal ws-hidden"
      data-qa="StickyHeader__shadow-top"
    />
    <div
      class="controls-Scroll__shadow controls-StickyHeader__shadow-bottom controls-StickyHeader__shadow-bottom_default controls-Scroll__shadow_horizontal ws-hidden"
      data-qa="StickyHeader__shadow-bottom"
    />
    <div
      class="controls-Scroll__shadow controls-StickyHeader__shadow-left controls-StickyHeader__shadow-left_default controls-Scroll__shadow_vertical"
      data-qa="StickyHeader__shadow-left"
    />
    <div
      class="controls-Scroll__shadow controls-StickyHeader__shadow-right controls-StickyHeader__shadow-right_default controls-Scroll__shadow_vertical ws-hidden"
      data-qa="StickyHeader__shadow-right"
    />
  </div>
</div>
`;

exports[`Controls/_stickyBlock/StickyBlockReact Стики блок рендерится с top = 10, left = 0, верхняя тень включена 1`] = `
<div
  class="controls-Scroll controls-Scroll-Container"
>
  <div
    class="controls-StickyBlock controls-background-default-sticky "
    style="top: 10px; left: 0px;"
  >
    <div
      class="controls-StickyBlock__content"
    >
      1
    </div>
    <div
      class="controls-StickyBlock__observationTarget_top"
      style="top: -12px;"
    />
    <div
      class="controls-StickyBlock__observationTarget_top2"
    />
    <div
      class="controls-StickyBlock__observationTarget_top2Right"
    />
    <div
      class="controls-StickyBlock__observationTarget_bottomLeft"
      style="bottom: -2px;"
    />
    <div
      class="controls-StickyBlock__observationTarget_bottomRight"
      style="bottom: -2px;"
    />
    <div
      class="controls-StickyBlock__observationTarget_left"
      style="left: -2px;"
    />
    <div
      class="controls-StickyBlock__observationTarget_right"
      style="right: -2px;"
    />
    <div
      class="controls-Scroll__shadow controls-StickyHeader__shadow-top controls-StickyHeader__shadow-top_default controls-Scroll__shadow_horizontal"
      data-qa="StickyHeader__shadow-top"
    />
    <div
      class="controls-Scroll__shadow controls-StickyHeader__shadow-bottom controls-StickyHeader__shadow-bottom_default controls-Scroll__shadow_horizontal ws-hidden"
      data-qa="StickyHeader__shadow-bottom"
    />
    <div
      class="controls-Scroll__shadow controls-StickyHeader__shadow-left controls-StickyHeader__shadow-left_default controls-Scroll__shadow_vertical ws-hidden"
      data-qa="StickyHeader__shadow-left"
    />
    <div
      class="controls-Scroll__shadow controls-StickyHeader__shadow-right controls-StickyHeader__shadow-right_default controls-Scroll__shadow_vertical ws-hidden"
      data-qa="StickyHeader__shadow-right"
    />
  </div>
</div>
`;

exports[`Controls/_stickyBlock/StickyBlockReact Стики блок рендерится со всеми тенями 1`] = `
<div
  class="controls-Scroll controls-Scroll-Container"
>
  <div
    class="controls-StickyBlock controls-background-default-sticky "
    style="top: 0px; bottom: 0px; left: 0px; right: 0px;"
  >
    <div
      class="controls-StickyBlock__content"
    >
      1
    </div>
    <div
      class="controls-StickyBlock__observationTarget_top"
      style="top: -2px;"
    />
    <div
      class="controls-StickyBlock__observationTarget_top2"
    />
    <div
      class="controls-StickyBlock__observationTarget_top2Right"
    />
    <div
      class="controls-StickyBlock__observationTarget_bottomLeft"
      style="bottom: -2px;"
    />
    <div
      class="controls-StickyBlock__observationTarget_bottomRight"
      style="bottom: -2px;"
    />
    <div
      class="controls-StickyBlock__observationTarget_left"
      style="left: -2px;"
    />
    <div
      class="controls-StickyBlock__observationTarget_right"
      style="right: -2px;"
    />
    <div
      class="controls-Scroll__shadow controls-StickyHeader__shadow-top controls-StickyHeader__shadow-top_default controls-Scroll__shadow_horizontal"
      data-qa="StickyHeader__shadow-top"
    />
    <div
      class="controls-Scroll__shadow controls-StickyHeader__shadow-bottom controls-StickyHeader__shadow-bottom_default controls-Scroll__shadow_horizontal"
      data-qa="StickyHeader__shadow-bottom"
    />
    <div
      class="controls-Scroll__shadow controls-StickyHeader__shadow-left controls-StickyHeader__shadow-left_default controls-Scroll__shadow_vertical"
      data-qa="StickyHeader__shadow-left"
    />
    <div
      class="controls-Scroll__shadow controls-StickyHeader__shadow-right controls-StickyHeader__shadow-right_default controls-Scroll__shadow_vertical"
      data-qa="StickyHeader__shadow-right"
    />
  </div>
</div>
`;

exports[`Controls/_stickyBlock/StickyBlockReact Стики блок строится с заданным классом и стилем, а также со следующими опциями: backgroundStyle=danger, zIndex=3, fixedPosition=top. 1`] = `
<div
  class="controls-Scroll controls-Scroll-Container"
>
  <div
    class="controls-StickyBlock controls-background-danger testClass"
    style="top: 0px; z-index: 3; background: red;"
  >
    <div
      class="controls-StickyBlock__content"
    >
      1
    </div>
    <div
      class="controls-StickyBlock__observationTarget_top"
      style="top: -2px;"
    />
    <div
      class="controls-StickyBlock__observationTarget_top2"
    />
    <div
      class="controls-StickyBlock__observationTarget_top2Right"
    />
    <div
      class="controls-StickyBlock__observationTarget_bottomLeft"
      style="bottom: -2px;"
    />
    <div
      class="controls-StickyBlock__observationTarget_bottomRight"
      style="bottom: -2px;"
    />
    <div
      class="controls-StickyBlock__observationTarget_left"
      style="left: -2px;"
    />
    <div
      class="controls-StickyBlock__observationTarget_right"
      style="right: -2px;"
    />
    <div
      class="controls-Scroll__shadow controls-StickyHeader__shadow-top controls-StickyHeader__shadow-top_default controls-Scroll__shadow_horizontal ws-hidden"
      data-qa="StickyHeader__shadow-top"
    />
    <div
      class="controls-Scroll__shadow controls-StickyHeader__shadow-bottom controls-StickyHeader__shadow-bottom_default controls-Scroll__shadow_horizontal ws-hidden"
      data-qa="StickyHeader__shadow-bottom"
    />
  </div>
</div>
`;
